--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
-    "react": "^18.2.0",
     "typescript": "^5.0.4",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.1",
@@ -51,5 +50,9 @@
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
     "*.{js,ts,css,md}": "prettier --write"
+  },
+  "dependencies": {
+    "@types/react": "^18.2.0",
+    "react": "^18.2.0"
   }
 }
