--- a/package.json
+++ b/package.json
@@ -31,17 +31,23 @@
     "@typescript-eslint/parser": "^5.59.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.1",
+    "mini-css-extract-plugin": "^2.7.5",
     "prettier": "^2.8.7",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "typescript": "^5.0.4",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.1",
