--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.194",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
@@ -60,6 +61,7 @@
   },
   "dependencies": {
     "@types/react": "^18.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "uuid": "^9.0.0"
   }
